# neon-music-bot

./: .editorconfig  .gitignore  .vsls.json  README.md  pyproject.toml
bot/: bot.py  config.py  init.py  player.py
bot/player/: player.py  source.py
docs/: CNAME  commands.html  hosted.html  index.html  invite.html  streams.html  support.html
docs/css/: bootstrap.css  main.css
docs/js/: bootstrap.js
web/: commands.html  index.html  streams.html
